<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageView1_100"
            android:layout_gravity="bottom"
            android:background="@drawable/background2"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:background="@drawable/background"
            android:contentDescription="@string/todo1" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_margin_top72"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtMail"
        android:layout_width="@dimen/edittext_width_240"
        android:layout_height="@dimen/edittext_height_40"
        android:layout_marginTop="@dimen/email_margin_top"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_person"
        android:drawableEnd="@null"
        android:drawablePadding="@dimen/drawble_padding_12dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:textAlignment="textStart"
        android:textColor="@color/text_edt_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="@dimen/edittext_width_240"
        android:layout_height="@dimen/edittext_height_40"
        android:layout_marginTop="@dimen/password_margin_top"
        android:autofillHints="password"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/drawble_padding_12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:textAlignment="textStart"
        android:textColor="@color/text_edt_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMail"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/edittext_width_240"
        android:layout_height="@dimen/edittext_height_40"
        android:layout_marginTop="@dimen/btnLogin_margin_top"
        android:background="@drawable/button_custom"
        android:backgroundTint="@color/login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/forgotPassword_margin_top"
        android:text="@string/forgot_your_password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/orConnect_margin_top"
        android:text="@string/or_connect_with"
        android:textColor="@color/text_connect_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="@dimen/button_width_150dp"
        android:layout_height="@dimen/button_height_35dp"
        android:layout_marginTop="@dimen/btnFacebook_margin_top"
        android:background="@drawable/button_custom"
        android:backgroundTint="@color/btn_facebook"
        android:drawableStart="@drawable/imgfacebook"
        android:drawablePadding="@dimen/drawble_padding_12dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_20"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnTwitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnTwitter"
        android:layout_width="@dimen/button_width_150dp"
        android:layout_height="@dimen/button_height_35dp"
        android:layout_marginTop="@dimen/btnFacebook_margin_top"
        android:background="@drawable/button_custom"
        android:backgroundTint="#5073B5"
        android:drawableStart="@drawable/imgtwitter"
        android:drawablePadding="@dimen/drawble_padding_12dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/padding_20"
        android:text="@string/twitter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFacebook"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/btnDontHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dontHaveAccount_margin_top"
        android:gravity="top"
        android:text="@string/dont_have_acc"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTwitter" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/text_signup_color"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/btnDontHave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toEndOf="@+id/btnDontHave"
        app:layout_constraintTop_toTopOf="@+id/btnDontHave"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />


</androidx.constraintlayout.widget.ConstraintLayout>